# ArrowLab

./: .gitignore  README.md  pyproject.toml
apk/: settings.gradle.kts
apk/app/: build.gradle.kts
apk/app/src/androidTest/java/com/arrowlab/phone/: ExampleInstrumentedTest.kt
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/java/com/arrowlab/phone/: AnnotationOverlay.kt  AspectFrameLayout.kt  CameraController.kt  MainActivity.kt  OnsetDetector.kt  ShotRecorder.kt
apk/app/src/main/res/layout/: activity_main.xml
apk/app/src/main/res/values/: strings.xml  themes.xml
apk/app/src/main/res/values-night/: themes.xml
apk/app/src/test/java/com/arrowlab/phone/: ExampleUnitTest.kt
apk/gradle/: libs.versions.toml
apk/gradle/wrapper/: gradle-wrapper.properties
data/raw/: annotations.yaml
docs/: DESIGN.md  initial_idea.md
scripts/: debug_motion_scan.py  fake_phone.py
src/arrowlab/: __init__.py
src/arrowlab/audio/: detect.py
src/arrowlab/dashboard/: server.py
src/arrowlab/dashboard/static/: app.css  app.js  index.html  shoot.html  shoot_wireframe.html  view.css  view.html  view.js
src/arrowlab/video/: encode.py  live_sim.py  synth.py  synth_combined.py  track.py
tests/: test_smoke.py
